fixed scrollbar issue

--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@
 html {
     height: 100%;
     padding: 8px;
+    overflow: hidden;
 }
 
 body {
     background-color: rgb(0, 0, 0);
     height: 100%;
     margin: 0;
+    overflow: hidden;
 }
