--- a/viewport.css
+++ b/viewport.css
@@ -1,5 +1,5 @@
 #viewPort {
-    background-color: transparent;
+    background-color: grey;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
